deployment/deployment.template.yml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: oci-objectstore-watcher
  annotations:
    kubernetes.io/change-cause: Upgrade to ${WERCKER_GIT_BRANCH}-${WERCKER_GIT_COMMIT} by ${WERCKER_STARTED_BY}
  labels:
    branch: ${WERCKER_GIT_BRANCH}
    commit: ${WERCKER_GIT_COMMIT}
spec:
  replicas: ${TPL_REPLICAS:-1}
  selector:
    matchLabels:
      app: oci-objectstore-watcher
  template:
    metadata:
      labels:
        app: oci-objectstore-watcher
        branch: ${WERCKER_GIT_BRANCH}
        commit: ${WERCKER_GIT_COMMIT}
    spec:
      imagePullSecrets:
      - name: quay-readonly
      nodeSelector:
        caste: patrician
      containers:

      - name: server
        image: quay.io/wercker/oci-objectstore-watcher:${WERCKER_GIT_BRANCH}-${WERCKER_GIT_COMMIT}
        args: [
          "server",
          "--metrics-port=9102",
        ]
        ports:
        - name: server
          containerPort: 43403
          protocol: TCP
        - name: metrics
          containerPort: 9102
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /live
            port: 43405
        readinessProbe:
          httpGet:
            path: /ready
            port: 43405
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        resources:
          requests:
            cpu: 50m
            memory: 25Mi
          limits:
            cpu: 500m
            memory: 500Mi

      - name: gateway
        image: quay.io/wercker/oci-objectstore-watcher:${WERCKER_GIT_BRANCH}-${WERCKER_GIT_COMMIT}
        args: [
          "gateway"
        ]
        ports:
        - name: gateway
          containerPort: 43404
          protocol: TCP
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
        resources:
          requests:
            cpu: 50m
            memory: 25Mi
          limits:
            cpu: 500m
            memory: 500Mi
