deployment/service.template.yml
---
kind: Service
apiVersion: v1
metadata:
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9102"
  name: oci-objectstore-watcher
spec:
  ports:
    - name: server
      port: 80
      targetPort: 43403
      protocol: TCP
    - name: gateway
      port: 8080
      targetPort: 43404
      protocol: TCP
    - name: http-metrics
      port: 9102
  selector:
    app: oci-objectstore-watcher
